--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -14,7 +14,7 @@
         [items]="typeOptions"
         [value]="typeOptions[defaultType]"
         label="Type"
-        (valueOnChange)="updateFormStates('type', $event); updateSelectedType($event.detail.value)"
+        (valueOnChange)="updateFormStates('type', $event); updateSelectedType($event)"
       ></elvia-dropdown>
     </div>
     <div *ngIf="iconsOptions.length !== 0 && !typesData" class="ceg-dropdown">
@@ -22,7 +22,7 @@
         [items]="iconsOptions"
         [value]="defaultIcon"
         label="Icon name"
-        (valueOnChange)="updateFormStates('name', $event); updateSelectedType($event.detail.value, true)"
+        (valueOnChange)="updateFormStates('name', $event); updateSelectedType($event, true)"
       ></elvia-dropdown>
     </div>
     <div *ngIf="typesData && typesData.length !== 0" class="ceg-dropdown">
@@ -30,7 +30,7 @@
         [items]="typeOptions"
         [value]="typeOptions[0]"
         label="Type"
-        (valueOnChange)="updateFormStates('type', $event); updateSelectedTypeCustom($event.detail.value)"
+        (valueOnChange)="updateFormStates('type', $event); updateSelectedTypeCustom($event)"
       ></elvia-dropdown>
     </div>
     <div *ngIf="bgOptions.length !== 0" class="ceg-dropdown">
@@ -38,7 +38,7 @@
         [items]="bgOptions"
         [value]="bgOptions[defaultBg]"
         label="Background"
-        (valueOnChange)="updateFormStates(bgObj.propName, $event); updateSelectedBg($event.detail.value)"
+        (valueOnChange)="updateFormStates(bgObj.propName, $event); updateSelectedBg($event)"
       ></elvia-dropdown>
     </div>
   </div>
