--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -13,7 +13,7 @@
       <div class="contact-profile-container kristin">
         <div class="contact-profile kristin">
           <div style="position: relative">
-            <div class="profile-emoji">🐨</div>
+            <div (click)="veryImportantFunction('kristin', '🐨')" id="kristin" class="profile-emoji">🐨</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgKri"
@@ -46,7 +46,7 @@
       <div class="contact-profile-container fride">
         <div class="contact-profile fride">
           <div style="position: relative">
-            <div class="profile-emoji">🐡</div>
+            <div (click)="veryImportantFunction('fride', '🐡')" id="fride" class="profile-emoji">🐡</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgFri"
@@ -79,7 +79,7 @@
       <div class="contact-profile-container trygve">
         <div class="contact-profile">
           <div style="position: relative">
-            <div class="profile-emoji">🐐</div>
+            <div (click)="veryImportantFunction('trygve', '🐐')" id="trygve" class="profile-emoji">🐐</div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgMic"
@@ -111,7 +111,9 @@
 
       <div class="contact-profile-container viljar">
         <div class="contact-profile viljar">
-          <div class="profile-emoji right">🦄</div>
+          <div (click)="veryImportantFunction('viljar', '🦄')" id="viljar" class="profile-emoji right">
+            🦄
+          </div>
           <div
             class="e-content-loader e-content-loader--circle profile-image-loader"
             *ngIf="!loadedImgPat"
@@ -145,7 +147,9 @@
       <div class="contact-profile-container hilde">
         <div class="contact-profile hilde">
           <div style="position: relative">
-            <div class="profile-emoji right">🙊</div>
+            <div (click)="veryImportantFunction('hilde', '🙊')" id="hilde" class="profile-emoji right">
+              🙊
+            </div>
             <div
               class="e-content-loader e-content-loader--circle profile-image-loader"
               *ngIf="!loadedImgHil"
@@ -169,39 +173,6 @@
                   <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
                 </span>
                 <span class="e-btn__title">Slack Hilde</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="contact-profile-container martin">
-        <div class="contact-profile martin">
-          <div style="position: relative">
-            <div class="profile-emoji right">🦩</div>
-            <div
-              class="e-content-loader e-content-loader--circle profile-image-loader"
-              *ngIf="!loadedImgMar"
-            ></div>
-            <img
-              alt="Martin"
-              class="profile-image"
-              src="./../../../../assets/contact/Martin.svg"
-              (load)="hideContentLoader($event, 'mar')"
-            />
-          </div>
-          <div class="profile-info">
-            <div class="e-title-caps">Developer</div>
-            <div class="e-title-sm e-mt-8">Martin Arentsen Espeland</div>
-            <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
-              martin.arentsen.espeland@elvia.no
-            </div>
-            <div class="profile-slack-button">
-              <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U01CE89DQ9Z">
-                <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
-                </span>
-                <span class="e-btn__title">Slack Martin</span>
               </a>
             </div>
           </div>
