--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
@@ -7,6 +7,9 @@
 
 .e-table-container.desktop {
   display: block;
+  margin-left: -72px;
+  width: calc(100% + 72px);
+  max-height: 80vh;
   @include breakpoint-up(Mobile) {
     display: none;
   }
