--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
@@ -10,6 +10,10 @@
   margin-left: -72px;
   width: calc(100% + 72px);
   max-height: 80vh;
+  @include breakpoint-up(Tablet) {
+    margin-left: 0px;
+    width: 100%;
+  }
   @include breakpoint-up(Mobile) {
     display: none;
   }
