--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -20,7 +20,8 @@
         We separate the available components into a style library and separate components. The style library
         is called elvis and can be used to get styling with html classes. For more advanced components we
         offer separate packages that can be used individually. When browsing our components it will be clear
-        what kind of component it is by looking at the code examples or the installation guidelines.
+        what kind of component it is by looking at the code examples or the installation guidelines. Find all
+        the components under "Components" in the main menu.
       </div>
 
       <div class="e-accordion e-accordion--group e-mt-40">
@@ -42,7 +43,7 @@
             <!--CDN-->
             <app-component-subsubsection [sectionTitle]="'With CDN'">
               <ng-container ngProjectAs="sectionContent">
-                Elvis can be very easily used through our elvis CDN.
+                Elvis can be very easily used through our CDN.
                 <ol class="e-list e-list--numbers">
                   <li>
                     <strong>Put the following in &lt;head></strong>
@@ -126,10 +127,9 @@
             <app-component-subsubsection [sectionTitle]="'Using CSS variables'">
               <ng-container ngProjectAs="sectionContent">
                 <div>
-                  Sometimes creating your own classes is necessary. For most of the identity like colors,
-                  shadows and spacing CSS-variables are also provided. All these variables are available when
-                  importing the main.scss file in your stylesheet, meaning you don't need to import any
-                  specific files to use them.
+                  For many of the our utilities, like colors and spacing, CSS-variables are also provided. All
+                  these variables are available when importing the main.scss file in your stylesheet, meaning
+                  you don't need to import any specific files to use them.
                   <div class="e-my-16">
                     <code class="code-text">var(--e-name-of-class)</code>
                   </div>
@@ -179,14 +179,13 @@
           <div class="e-accordion__content">
             <div>
               Our components have each their own npm package that can be used individually or together with
-              other components or with elvis. Our components are also listed together with the styling library
-              under components, but we also offer colors, typography and icons as individual packages if you
-              don't want to use Elvis.
+              other components and elvis. Our components are also listed together with the styling library
+              under "Components" in the menu. We also offer colors, typography and icons as individual
+              packages if you don't want to use Elvis.
             </div>
 
             <div class="e-mt-24">
-              Each components have their own guidelines for how to use and install the package in your
-              project.
+              Each components has their own guidelines for how to use and install the package in your project.
             </div>
           </div>
         </div>
