add open search shortcut

--- a/packages/web/src/app/shell/header/header.component.html
+++ b/packages/web/src/app/shell/header/header.component.html
@@ -47,7 +47,7 @@
   </div>
 
   <div class="external-links">
-    <div class="tabs-links elvis-search e-mr-24" (click)="openSearchMenu()">
+    <div class="tabs-links elvis-search e-mr-24" (click)="openSearchMenu()" id="search-button">
       <span class="elvis-search__icon e-mr-8">
         <i class="e-icon e-icon--search-bold e-icon--xs e-icon--inverted" aria-hidden="true"></i>
       </span>
