fuzzy search highlighting

--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -2,8 +2,7 @@
 <app-component-header [figmaUrl]="figmaUrl">
   <ng-container ngProjectAs="headerTitle">Layout</ng-container>
   <ng-container ngProjectAs="headerDescription">
-    Layout provides rules to give designs consistent rhythm in the application, as well as across applications
-    to ensure a holistic design in Elvia. The layout consist of grid, spacing and box design.
+    {{ description }}
   </ng-container>
 </app-component-header>
 
