Accordion group - Removed flex from content container

--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -199,7 +199,7 @@
               <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
-          <div class="e-accordion__content" style="display: block">
+          <div class="e-accordion__content">
             Find all the utilities we provide under the
             <a class="e-link e-link--inline" [routerLink]="['/brand']">brand</a>
             and
