Lego 1732: Add pride logo to design.elvia.io (#853)
* add pride logo in june

* add small pride logo for internal header

--- a/packages/web/src/app/shell/header/header.component.scss
+++ b/packages/web/src/app/shell/header/header.component.scss
@@ -207,3 +207,13 @@
     }
   }
 }
+
+.pride-logo {
+  margin-left: 16px;
+  margin-right: 8px;
+  transform: scale(1.85);
+}
+
+.pride-logo-internal {
+  transform: scale(1.85);
+}
