--- a/packages/web/src/app/shell/header/header.component.html
+++ b/packages/web/src/app/shell/header/header.component.html
@@ -3,9 +3,17 @@
   <div class="logo">
     <a [ngClass]="{ show: headerLogoLoaded }" class="header-logo-link" [routerLink]="['', 'home']">
       <img
+        *ngIf="!isPrideMonth"
         src="./../../../assets/logo/elvia_negative_1.svg"
         alt="Elvia Logo"
         (load)="hideContentLoader($event)"
+      />
+      <img
+        *ngIf="isPrideMonth"
+        src="./../../../assets/logo/elvia_pride_rgb.svg"
+        alt="Elvia Logo"
+        (load)="hideContentLoader($event)"
+        class="pride-logo"
       />
     </a>
     <div
@@ -132,7 +140,13 @@
           <div class="col-xs-2 col-sm-3 col-md-7 col-lg-8">
             <!--LOGO-->
             <div class="e-header__top-bar-desktop__logo">
-              <img src="./../../../assets/logo/elvia_positive_4.svg" alt="Elvia Logo" />
+              <img src="./../../../assets/logo/elvia_positive_4.svg" alt="Elvia Logo" *ngIf="!isPrideMonth" />
+              <img
+                src="./../../../assets/logo/e_pride_rgb.svg"
+                alt="Elvia Logo"
+                *ngIf="isPrideMonth"
+                class="pride-logo-internal"
+              />
             </div>
             <!--APP-->
             <div class="e-header__top-bar-desktop__app">
