--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.html
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.html
@@ -88,7 +88,7 @@
             (keyup)="onSearch()"
           />
         </div>
-        <button class="e-btn e-btn--icon" (click)="removeSearch()" aria-label="Empty search field">
+        <button class="e-btn e-btn--icon" (click)="clearSearch()" aria-label="Empty search field">
           <span class="e-btn__icon">
             <i class="e-icon e-icon--close-bold" aria-hidden="true" aria-hidden="true"></i>
           </span>
