--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.html
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.html
@@ -88,7 +88,7 @@
             (keyup)="onSearch()"
           />
         </div>
-        <button class="e-btn e-btn--icon" (click)="removeSearch()" aria-label="Empty search field">
+        <button class="e-btn e-btn--icon" (click)="clearSearch()" aria-label="Empty search field">
           <span class="e-btn__icon">
             <i class="e-icon e-icon--close-bold" aria-hidden="true" aria-hidden="true"></i>
           </span>
@@ -111,9 +111,9 @@
       >
         <div class="result-title">
           <div class="title item-title" [id]="'search_' + result.title">{{ result.title }}</div>
-          <label class="e-label" *ngIf="result.type === 'Component'">{{ result.type }}</label>
+          <label class="e-label" *ngIf="result.type">{{ result.type }}</label>
         </div>
-        <div class="result-content">
+        <div class="result-content" *ngIf="result.description">
           <div class="description-item" [id]="encodeHTML(result.description)"></div>
         </div>
       </a>
