--- a/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/contact/contact.component.html
@@ -10,40 +10,7 @@
 <div class="page-body">
   <app-component-subsection>
     <ng-container ngProjectAs="sectionContent">
-      <div class="contact-profile-container kristin">
-        <div class="contact-profile kristin">
-          <div style="position: relative">
-            <div (click)="veryImportantFunction('kristin', '🐨')" id="kristin" class="profile-emoji">🐨</div>
-            <div
-              class="e-content-loader e-content-loader--circle profile-image-loader"
-              *ngIf="!loadedImgKri"
-            ></div>
-            <img
-              alt="Kristin"
-              class="profile-image"
-              src="./../../../../assets/contact/Kristin.png"
-              (load)="hideContentLoader($event, 'kri')"
-            />
-          </div>
-          <div class="profile-info">
-            <div class="e-title-caps">Developer & Team leader</div>
-            <div class="e-title-sm e-mt-8">Kristin Pettersen</div>
-            <div class="e-text-description" style="margin-top: 4px; margin-bottom: 16px">
-              kristin.pettersen@elvia.no
-            </div>
-            <div class="profile-slack-button">
-              <a class="e-btn e-btn--tertiary" href="slack://user?team=TU3R0B42K&id=U035607MEJG">
-                <span class="e-btn__icon">
-                  <img alt="" src="./../../../../assets/contact/figma-icon.svg" />
-                </span>
-                <span class="e-btn__title">Slack Kristin</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="contact-profile-container fride">
+      <div class="contact-profile-container fride e-mt-40">
         <div class="contact-profile fride">
           <div style="position: relative">
             <div (click)="veryImportantFunction('fride', '🐡')" id="fride" class="profile-emoji">🐡</div>
