--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,12 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <i class="e-icon e-icon--lock e-icon--color-elvia-charge"></i>
-      <i class="e-icon e-icon--lock e-icon--color-error"></i>
-      <i class="e-icon e-icon--lock e-icon--color-disabled"></i>
-      <i class="e-icon e-icon--lock e-icon--color-orange-mango"></i>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
