--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,10 +6,13 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
-      <i class="e-icon e-icon--lock e-icon--color-elvia-charge"></i>
-      <i class="e-icon e-icon--lock e-icon--color-error"></i>
-      <i class="e-icon e-icon--lock e-icon--color-disabled"></i>
-      <i class="e-icon e-icon--lock e-icon--color-orange-mango"></i>
+      <elvia-popover heading="BankID" horizontalPosition="right" width="200" [isShowing]="isPopoverShowing">
+        <button slot="trigger" class="e-btn">Show popover</button>
+        <div slot="content">
+          Alle privatkunder må bruke BankID første gang. Alle privatkunder må bruke BankID første gang.
+          <button class="e-btn" (click)="isPopoverShowing = !isPopoverShowing">Lukke popover</button>
+        </div>
+      </elvia-popover>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
@@ -215,13 +218,13 @@
   <!--Popover-->
   <div class="example-wrapper">
     <h3>Popover</h3>
-    <elvia-popover heading="BankID" horizontalPosition="right" width="200" [isShowing]="isPopoverShowing">
+    <!-- <elvia-popover heading="BankID" horizontalPosition="right" width="200" [isShowing]="isPopoverShowing">
       <button slot="trigger" class="e-btn">Show popover</button>
       <div slot="content">
         Alle privatkunder må bruke BankID første gang. Alle privatkunder må bruke BankID første gang.
         <button class="e-btn" (click)="isPopoverShowing = !isPopoverShowing">Lukke popover</button>
       </div>
-    </elvia-popover>
+    </elvia-popover> -->
   </div>
 
   <!--Progress linear-->
