--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
@@ -53,7 +53,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      width: 72.5%;
+      width: 75%;
       @include breakpoint-up(Mobile) {
         width: 100%;
       }
@@ -73,7 +73,10 @@
       }
       padding-left: 24px;
       margin-top: auto;
-      margin-bottom: auto;
+
+      .ceg-customize-popover-trigger {
+        white-space: nowrap;
+      }
     }
   }
 
