--- a/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
@@ -60,6 +60,23 @@
     </ng-container>
   </app-component-section>
 
+  <!-- Implementation -->
+  <app-component-section [sectionTitle]="'Implementation'">
+    <ng-container ngProjectAs="sectionContent">
+      The date picker component supports getting the selected date in two different ways: as a date object
+      through
+      <span class="code-text">valueOnChange</span>
+      , or as an ISO formated string (without containing time) through
+      <span class="code-text">valueOnChangeISOString</span>
+      (e.g.
+      <span class="code-text">'2022-06-20'</span>
+      ). When using
+      <span class="code-text">valueOnChange</span>
+      , be wary that the returned date object also contains the current time of day when it was chosen, which
+      may cause problems for time zone changes or when switching daylight saving time.
+    </ng-container>
+  </app-component-section>
+
   <!--INSTALLATION-->
   <app-component-section [sectionTitle]="'Installation'">
     <ng-container ngProjectAs="sectionContent">
