--- a/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/datepicker-doc/datepicker-doc.component.html
@@ -60,6 +60,24 @@
     </ng-container>
   </app-component-section>
 
+  <!-- Implementation -->
+  <app-component-section [sectionTitle]="'Implementation'">
+    <ng-container ngProjectAs="sectionContent">
+      The date picker component supports getting the selected date in two different ways: as a date object
+      through
+      <span class="code-text">valueOnChange</span>
+      , or as an ISO formated string (without containing time) through
+      <span class="code-text">valueOnChangeISOString</span>
+      (e.g.
+      <span class="code-text">'2022-06-20'</span>
+      ). When using
+      <span class="code-text">valueOnChange</span>
+      , the returned date object will contain the selected date, with the time set to
+      <span class="code-text">00:00:00</span>
+      .
+    </ng-container>
+  </app-component-section>
+
   <!--INSTALLATION-->
   <app-component-section [sectionTitle]="'Installation'">
     <ng-container ngProjectAs="sectionContent">
