add percy test nested css accordion

--- a/packages/elvis/percy/components/accordion.html
+++ b/packages/elvis/percy/components/accordion.html
@@ -32,6 +32,28 @@
           <div class="e-accordion__content">Hidden information</div>
         </div>
       </div>
+      <div class="e-accordion e-accordion--single e-mt-40">
+        <div class="e-accordion__item e-accordion__item--open">
+          <div class="e-accordion__title">Open Nested Accordion</div>
+          <div class="e-accordion__icon">
+            <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+            <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+          </div>
+          <div class="e-accordion__content">
+            The inner accordion's icon is not in open state.
+            <div class="e-accordion e-accordion--single e-ml-8">
+              <div class="e-accordion__item">
+                <div class="e-accordion__title">Closed Inner Accordion</div>
+                <div class="e-accordion__icon">
+                  <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+                </div>
+                <div class="e-accordion__content">Hidden information</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="e-title-xs e-mt-16">Group Accordion</div>
     <div class="e-mt-16" style="width: 100%; display: flex; justify-content: space-evenly">
