--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -44,6 +44,9 @@ $grey-05: #f4f4f4;
   &:not(.ewc-popover--hide) {
     .ewc-popover__trigger {
       z-index: 110;
+      button {
+        background: $green !important;
+      }
     }
   }
 
@@ -128,12 +131,6 @@ $grey-05: #f4f4f4;
     @media screen and (-ms-high-contrast: none) {
       width: 450px;
     }
-  }
-
-  &.ewc-popover--bottom .ewc-popover__content {
-    top: 100%;
-    bottom: auto;
-    margin-top: 16px;
   }
 
   // List
