--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,15 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-popover heading="BankID" horizontalPosition="right" width="200" [isShowing]="isPopoverShowing">
-        <button slot="trigger" class="e-btn">Show popover</button>
-        <div slot="content">
-          Alle privatkunder må bruke BankID første gang. Alle privatkunder må bruke BankID første gang.
-          <button class="e-btn" (click)="isPopoverShowing = !isPopoverShowing">Lukke popover</button>
-        </div>
-      </elvia-popover>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -212,19 +204,28 @@
       [value]="defaultPaginationValue"
       [alignment]="'right'"
       dropdownMenuPosition="top"
+      [hay]="false"
     ></elvia-pagination>
   </div>
 
   <!--Popover-->
   <div class="example-wrapper">
     <h3>Popover</h3>
-    <!-- <elvia-popover heading="BankID" horizontalPosition="right" width="200" [isShowing]="isPopoverShowing">
+    <elvia-popover
+      [isShowing]="isPopoverShowing"
+      (onOpen)="isPopoverShowing = true"
+      (onClose)="isPopoverShowing = false"
+      heading="BankID"
+      horizontalPosition="right"
+      verticalPosition="top"
+      width="200"
+    >
       <button slot="trigger" class="e-btn">Show popover</button>
       <div slot="content">
         Alle privatkunder må bruke BankID første gang. Alle privatkunder må bruke BankID første gang.
         <button class="e-btn" (click)="isPopoverShowing = !isPopoverShowing">Lukke popover</button>
       </div>
-    </elvia-popover> -->
+    </elvia-popover>
   </div>
 
   <!--Progress linear-->
