Shadow - New shadow documentation and some new flex classes

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -8417,6 +8417,14 @@ input:focus {
   border: none;
 }
 
+.e-br-4 {
+  border-radius: 4px;
+}
+
+.e-br-8 {
+  border-radius: 8px;
+}
+
 /*!
  * Bootstrap Grid v4.6.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -12667,6 +12675,14 @@ THE SOFTWARE.
   justify-content: flex-end;
 }
 
+.e-justify-content-between {
+  justify-content: space-between;
+}
+
+.e-justify-content-around {
+  justify-content: space-around;
+}
+
 .e-align-items-center {
   align-items: center;
 }
@@ -12677,4 +12693,24 @@ THE SOFTWARE.
 
 .e-align-items-end {
   align-items: flex-end;
+}
+
+.e-gap-8 {
+  gap: 8px;
+}
+
+.e-gap-16 {
+  gap: 16px;
+}
+
+.e-gap-24 {
+  gap: 24px;
+}
+
+.e-gap-32 {
+  gap: 32px;
+}
+
+.e-gap-40 {
+  gap: 40px;
 }
